--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,8 @@
         "vonage/client": "^3.0"
     },
     "require-dev": {
-        "roave/security-advisories": "dev-latest",
         "laravel/pint": "^1.0",
+        "mockery/mockery": "^1.5",
         "nunomaduro/collision": "^6.0",
         "nunomaduro/larastan": "^2.0.1",
         "orchestra/testbench": "^7.0",
